<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".LogIn_activity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200sp"
        android:scaleType="fitXY"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image_log1" />

    <TextView
        android:id="@+id/AppHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="@string/AppN"
        android:textColor="@color/Wet_0"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/UserN_In"
        android:layout_width="match_parent"
        android:layout_height="58dp"


        android:layout_below="@+id/AppHeading"
        android:layout_marginStart="@dimen/MarginS_E"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="@dimen/MarginS_E"
        android:background="@drawable/round_login"
        android:backgroundTint="@color/Wet_1"

        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/Padding"
        android:hint="@string/HintUserN"

        android:inputType="textPersonName"
        android:padding="@dimen/Padding"
        android:textColor="@color/white"
        android:textColorHint="@color/half_white" />


    <EditText
        android:id="@+id/UserP_In"
        android:layout_width="match_parent"
        android:layout_height="58dp"


        android:layout_below="@+id/UserN_In"
        android:layout_marginStart="@dimen/MarginS_E"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/MarginS_E"
        android:background="@drawable/round_login"
        android:backgroundTint="@color/Wet_1"

        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="@dimen/Padding"
        android:padding="@dimen/Padding"

        android:hint="@string/HintPass"
        android:textColorHint="@color/half_white"
        android:textColor="@color/white"
        android:inputType="numberPassword"
        />


    <TextView
        android:id="@+id/ForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/UserP_In"

        android:layout_marginStart="210sp"
        android:layout_marginTop="10sp"
        android:text="@string/ForgotPass"
        android:textColor="@color/black"

        />


    <CheckBox
        android:id="@+id/CheckBox_id"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@id/UserP_In"
        android:layout_marginStart="50sp"

        android:layout_marginTop="35dp"
        android:paddingStart="15sp"
        android:text="@string/String_checkbox"
        android:textColor="@color/black"


        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"

        android:layout_below="@id/CheckBox_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"

        android:background="@drawable/ripple_login"

        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/SignUp_link"
        android:layout_width="80dp"
        android:layout_height="20dp"

        android:layout_below="@id/login_btn"
        android:layout_marginStart="230sp"
        android:layout_marginTop="40sp"

        android:background="@drawable/ripple_login"

        android:text="@string/signup_btn"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/Don_t_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/login_btn"
        android:layout_marginStart="80sp"
        android:layout_marginTop="40dp"

        android:text="@string/Do_not_have_acc"
        android:textColor="@color/black" />


</RelativeLayout>