<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPass_activity"

    android:background="#FFFFFF">


    <ImageView
        android:id="@+id/img_ForgotPass"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_centerHorizontal="true"

        android:scaleType="fitXY"
        android:src="@drawable/image_log2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/Forget_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_ForgotPass"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/heading2"
        android:textAlignment="center"
        android:textColor="@color/Wet_0"
        android:textSize="35sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_ForgotPass" />

    <TextView
        android:id="@+id/ForgetP_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Forget_Pass"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="8dp"
        android:text="@string/ForgetP_detail"
        android:textAlignment="center"
        android:textColor="@color/Wet_0"
        android:textSize="15sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_Pass" />

    <EditText
        android:id="@+id/ForgetP_mail"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_below="@+id/ForgetP_detail"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="32dp"
        android:background="@drawable/round_login"

        android:backgroundTint="@color/Wet_0"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="16sp"
        android:hint="@string/HintEmail"
        android:inputType="textEmailAddress"

        android:maxLines="1"
        android:padding="19sp"
        android:paddingStart="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/half_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgetP_detail" />

    <Button
        android:id="@+id/ForgetP_btn"
        android:layout_width="130sp"
        android:layout_height="50sp"

        android:layout_below="@+id/ForgetP_mail"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="32dp"
        android:background="@drawable/ripple_logout"
        android:backgroundTint="@color/Wet_1"
        android:text="@string/Next"
        android:textColor="@color/white"

        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgetP_mail" />

</android.support.constraint.ConstraintLayout>





